# metemcyber

./: .dockerignore  .gitignore  .gitmodules  .readthedocs.yml  KnownErrors.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  build.earth  fetch_misp_events.sh  gui_readme.md  init.sh  kedro.yml  metemctl  metemctl.ini  metemctl.ini.template  metemcyber.settings  metemcyber_common.sh  metemcyber_ctl.sh  misp.ini  misp_feeder.sh  multi_solver_temporal_start.sh  multi_solver_temporal_stop.sh  package-lock.json  package.json  requirements.txt  setup.cfg  setup.py  setup_demo_catalog.in  truffle-config.js  trusted_users.tsv  tx_monitor.conf.tmpl  upload_downloaded_events.sh
.github/workflows/: build.yml  main.yml
6d70381b-977a-4f5e-8e8b-72939e84798f/: README.md  pyproject.toml
6d70381b-977a-4f5e-8e8b-72939e84798f/docs/source/: conf.py  index.rst
6d70381b-977a-4f5e-8e8b-72939e84798f/src/: requirements.txt  setup.py
6d70381b-977a-4f5e-8e8b-72939e84798f/src/metemcyber_6d70381b_977a_4f5e_8e8b_72939e84798f/: __init__.py  __main__.py  settings.py
6d70381b-977a-4f5e-8e8b-72939e84798f/src/tests/: test_run.py
ae8fe20b-62fd-44bf-ac0d-b4f368a35d79/conf/base/: catalog.yml
ae8fe20b-62fd-44bf-ac0d-b4f368a35d79/docs/source/: index.rst
ae8fe20b-62fd-44bf-ac0d-b4f368a35d79/src/: requirements.in  requirements.txt
ae8fe20b-62fd-44bf-ac0d-b4f368a35d79/src/metemcyber_ae8fe20b_62fd_44bf_ac0d_b4f368a35d79/: pipeline_registry.py
contracts/: AddressGroup.sol  CTIBroker.sol  CTICatalog.sol  CTIOperator.sol  CTIToken.sol  MetemcyberMinimal.sol  MetemcyberUtil.sol  Migrations.sol  Votable.sol
demo/: Dockerfile  init_misp.sh  remove_misp.sh
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/cti/: actionable.rst  basic.rst  create.rst  target.rst
docs/setup/: metemcyber.rst  misp.rst
gui/: .env.example  docker-path  gui_readme.md  package-lock.json  package.json
gui/public/: electron.js  index.html  preload.js
gui/src/: App.css  App.js  App.test.js  index.css  index.js  reportWebVitals.js  setupTests.js
gui/src/containers/: account.js  buycti.js  default.css  defaultLayout.js  login.css  login.js
metemcyber/cli/: cli.py  constants.py  external-links.json  metemctl.ini.template
metemcyber/cli/app_dir/: metemctl.ini  workspace
metemcyber/core/: logger.py  multi_solver.py  multi_solver_cli.py  ngrok.py  plugin.py  seeker.py  solver.py  util.py  webhook.py
metemcyber/core/bc/: account.py  address_group.py  broker.py  catalog.py  catalog_manager.py  contract.py  contracts_data  cti_broker.py  cti_catalog.py  cti_operator.py  cti_token.py  ether.py  eventlistener.py  metemcyber_util.py  operator.py  token.py  util.py
metemcyber/plugins/: gcs_solver.py  standalone_solver.py
metemcyber/utils/: log.py
migrations/: 1_initial_migration.js  2_deploy_erc1820.js  3_deploy_ctitoken.js  4_deploy_cticatalog.js  5_deploy_ctioperator.js  6_deploy_ctibroker.js
public/: electron.js
requirements/: common.txt  docs.txt  test.txt  tools.txt
src/: App.js  client.py  client_model.py  client_ui.py  contract.py  contract_visitor.py  ctibroker.py  cticatalog.py  ctioperator.py  ctitoken.py  erc1820.tx.raw  eventlistener.py  generate_feed.py  inventory.py  metemctl.py  metemctl_account.py  metemctl_config.py  metemctl_misp.py  metemctl_new.py  metemctl_publish.py  metemcyberutil.py  misp_client.py  misp_validator.py  multi_solver.py  multi_solver_cli.py  plugin.py  seeker.py  solver.py  solver_wrapper.py  wallet.py  webhook.py
src/containers/: account.js  buycti.js  default.css  defaultLayout.js  login.js
src/containers/Challange/: cancel.js  execution.js
src/contracts_data/: CTIBroker.combined.json  CTICatalog.combined.json  CTIOperator.combined.json  CTIToken.combined.json  MetemcyberUtil.combined.json
src/metemcyber/cli/: cli.py  config.py  source_of_truth.yml  workflow.yml
src/metemcyber/core/: asset_manager.py  constants.py  logger.py  multi_solver.py  (+7 more)
src/plugins/: gcs_solver.py  standalone_solver.py
test/: TestAddressGroup.js  TestCTIBroker.js  TestCTICatalog.js  TestCTICatalog.sol  TestCTIOperator.js  TestCTIToken.js  TestCTIToken.sol
workspace.besu/: environments  provider_ctl
workspace.ganache/: provider_ctl
workspace.ganache-gui/: environments  provider_ctl
workspace.ganache-local/: provider_ctl
workspace.pricom/: config.ini  environments  provider_ctl
workspace.tester/: provider_ctl
(+118 files in other folders)
