#
#    Copyright 2021, NTT Communications Corp.
#
#    Licensed under the Apache License, Version 2.0 (the "License");
#    you may not use this file except in compliance with the License.
#    You may obtain a copy of the License at
#
#        http://www.apache.org/licenses/LICENSE-2.0
#
#    Unless required by applicable law or agreed to in writing, software
#    distributed under the License is distributed on an "AS IS" BASIS,
#    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#    See the License for the specific language governing permissions and
#    limitations under the License.
#

# See https://setuptools.readthedocs.io/en/latest/setuptools.html

[metadata]
name = metemcyber
version = attr: metemcyber.__version__
author = NTT Communications Corporation
author_email = metemcyber@ntt.com
license = Apache-2
description = Decentralized Cyber Threat Intelligence Kaizen Framework.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = cti, cyber, threat, intelligence, data pipelines, ethereum
url = https://github.com/nttcom/metemcyber
project_urls =
    Bug Tracker = https://github.com/nttcom/metemcyber/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Security
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.8
package_dir =
    = metemcyber
packages = find:
include_package_data = True

[options.packages.find]
where = metemcyber

[options.entry_points]
console_scripts =
    metemctl = metemcyber.cli.cli:app

[pylint]
disable = CC0114,C0115,C0116,R0903,R0902,R0913,W1309,W1203,W1309,R0801,W0703,W0511,C0111,E0401
max-line-length = 100

[isort]
# known_first_party=
# known_third_party=
line_length=100

[mypy]
ignore-missing-imports = True