#
#    Copyright 2021, NTT Communications Corp.
#
#    Licensed under the Apache License, Version 2.0 (the "License");
#    you may not use this file except in compliance with the License.
#    You may obtain a copy of the License at
#
#        http://www.apache.org/licenses/LICENSE-2.0
#
#    Unless required by applicable law or agreed to in writing, software
#    distributed under the License is distributed on an "AS IS" BASIS,
#    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#    See the License for the specific language governing permissions and
#    limitations under the License.
#

# See https://setuptools.readthedocs.io/en/latest/setuptools.html

[metadata]
license_file = LICENSE
name = metemcyber
version = attr: metemcyber.__version__
author = NTT Communications Corporation
author_email = metemcyber@ntt.com
description = Decentralized Cyber Threat Intelligence Kaizen Framework.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = cti, cyber, threat, intelligence, data pipelines, ethereum
url = https://github.com/nttcom/metemcyber
project_urls =
    Source = https://github.com/nttcom/metemcyber/
    Bug Tracker = https://github.com/nttcom/metemcyber/issues
    Documentation = http://metemcyber.readthedocs.org/
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Security
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.8
packages = find:
include_package_data = True
install_requires=
    web3
    flask
    pymisp
    typer
    psutil
    cryptography
    eth-account
    PyYAML
    google-cloud-storage

[options.extras_require]
cli =
    kedro
    kedro-viz

[options.package_data]
metemcyber = core/bc/contracts_data/*.combined.json*, cli/*

[options.entry_points]
console_scripts =
    metemctl = metemcyber.cli.cli:app

[isort]
# known_first_party=
# known_third_party=
line_length = 100

[pylint]
max-line-length = 100
ignore = cli/starter

[pylint.messages control]
disable = CC0114,C0115,C0116,R0903,R0902,R0913,W1309,W1203,W1309,R0801,W0703,W0511,C0111

[mypy]
ignore_missing_imports = True
exclude = cli/starter
